--- a/src/mem/SConscript
+++ b/src/mem/SConscript
@@ -54,10 +54,12 @@ SimObject('ExternalMaster.py')
 SimObject('ExternalSlave.py')
 SimObject('CfiMemory.py')
 SimObject('SimpleMemory.py')
+SimObject('ScratchpadMemory.py')
 SimObject('XBar.py')
 SimObject('HMCController.py')
 SimObject('SerialLink.py')
 SimObject('MemDelay.py')
+SimObject('ScratchpadMemory.py')
 
 Source('abstract_mem.cc')
 Source('addr_mapper.cc')
@@ -76,6 +78,7 @@ Source('packet_queue.cc')
 Source('port_proxy.cc')
 Source('physical.cc')
 Source('simple_mem.cc')
+Source('scratchpad_mem.cc')
 Source('snoop_filter.cc')
 Source('stack_dist_calc.cc')
 Source('token_port.cc')
@@ -133,6 +136,7 @@ DebugFlag("DRAMsim3")
 DebugFlag('HMCController')
 DebugFlag('SerialLink')
 DebugFlag('TokenPort')
+DebugFlag('ScratchpadMemory')
 
 DebugFlag("MemChecker")
 DebugFlag("MemCheckerMonitor")
